--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
   "devDependencies": {
     "babel": "^6.3.13",
     "babel-cli": "^6.3.17",
+    "babel-plugin-external-helpers": "^6.4.0",
     "babel-preset-es2015-rollup": "^1.1.1",
     "babel-preset-react": "^6.3.13",
-    "rollup": "0.25.1"
+    "rollup": "0.25.1",
+    "rollup-plugin-babel": "^2.3.9"
   },
   "peerDependencies": {
     "react": "^0.14.3"
   },
   "dependencies": {
-    "babel-plugin-external-helpers": "^6.4.0",
-    "rollup-plugin-babel": "^2.3.9"
   }
 }
